Se mejora la presentacion del chatbot

--- a/src/UCP.SI.Bot/appsettings.json
+++ b/src/UCP.SI.Bot/appsettings.json
@@ -8,6 +8,6 @@
     "ConversationTimeoutInMinutes": 10,
     "BotName": "Botsito",
     "CompanyName": "Ingenieria en Sistemas de Informacion",
-    "WelcomeMessage": "Hola, Soy el adivinador de tu destino...\n\n de viaje.\n\nRespondeme estas preguntas y te diré donde podrás ir en tu próximo viaje."
+    "WelcomeMessage": "Hola, Soy el ***adivinador de tu destino***...\n\n **Tu destino tur&iacute;stico**.\n\nRespondeme estas preguntas y te dir&eacute; donde podr&aacute;s ir en tu pr&oacute;ximo viaje."
   }
 }
