Vinculacion con QnA_Maker

--- a/src/UCP.SI.Bot/appsettings.json
+++ b/src/UCP.SI.Bot/appsettings.json
@@ -4,6 +4,10 @@
   "MicrosoftAppPassword": "",
   "MicrosoftAppTenantId": "",
 
+  "QnAKnowledgebaseId": "",
+  "QnAEndpointKey": "",
+  "QnAEndpointHostName": "",
+
   "Bot": {
     "ConversationTimeoutInMinutes": 10,
     "BotName": "Botsito",
